[package]
name = "cf-oauth-proxy"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.7.1", features = ['http'] }
worker-macros = { version = "0.7.1", features = ['http'] }
http = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
base64 = "0.22"
url = "2.5"
urlencoding = "2.1"
